--- a/src/app/_config.yml
+++ b/src/app/_config.yml
@@ -5,3 +5,12 @@ baseurl: ""
 url: "https://jelalisameh.github.io/github-pokemon" 
 markdown: kramdown
 theme: minima 
+
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+
+permalink: /:categories/:year/:month/:day/:title.html
+collections:
+  my_collection:
+    output: true
