Configure Jekyll site

--- a/angular.json
+++ b/angular.json
@@ -76,7 +76,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "optimization": true,
+              "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
             }
